--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "defnotkniffel",
   "version": "1.0.0",
   "description": "se19+id19",
-  "main": "index.js",
+  "main": "app.js",
+  "type": "module",
   "scripts": {
+    "start": "node scripts/app.js",
+    "dev": "nodemon scripts/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
